# czech-grants-scraper

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  MIGRATION.md  PRD.md  PRESENTATION_SCRIPT.md  README.md  SCRAPER_TODOS.md  __main__.py  conductor.json  main.py  pyproject.toml  requirements.txt  test_llm_extractor.py  test_mz_scraper.py
.actor/: INPUT.json  actor.json  dataset_schema.json  input_schema.json  output_schema.json
.venv-actor/: pyvenv.cfg
.venv-test/: pyvenv.cfg
actors/mz-actor/: AI_EXTRACTION.md  Dockerfile  README.md  __main__.py  main.py  mz-actor.py  mz_grants_scraper.py  requirements.txt  scrapers  test_scraper.py
actors/mz-actor/.actor/: actor.json  input_schema.json
actors/mz-actor/src/: __init__.py  main.py  mapper.py  scraper.py  utils.py
actors/mz-actor/src/scrapers_lib/: __init__.py  models.py  utils_simple.py
actors/mz-actor/storage/key_value_stores/default/: INPUT.json
actors/mzd-actor/: listing_raw.html  package.json
actors/mzd-actor/.actor/: actor.json  dataset_schema.json  input_schema.json
actors/mzd-actor/src/: main.js
actors/mze-scraper/: README.md  main.py  requirements.txt
actors/mze-scraper/scrapers/grants/: __init__.py
actors/mze-scraper/scrapers/grants/sources/: __init__.py  mze_szif_cz.py  pdf_zasady_parser.py
actors/mze-scraper/src/: config.py  main_scraper.py  pdf_parser.py
actors/mze_scraper/: Dockerfile  __init__.py  __main__.py  requirements.txt
actors/mze_scraper/.actor/: actor.json  dataset_schema.json  input_schema.json
actors/mze_scraper/scrapers/grants/sources/: base.py  mze_szif_cz.py  utils.py
actors/mze_scraper/src/: html_scraper.py  main.py
data/examples/: grants_sample.json
docs/: PRD-2-scraping-architecture.md  adding-scrapers.md  architecture.md  data-sources.md  llm-enrichment.md
docs/research/: dotaceeu-analysis.md  grant-sources-complete.md  krajske-dotace-detail.md  mezinarodni-zdroje-detail.md  nadace-detail.md  zdroje-kompletni-seznam.md
grantio-scraper/: README.md  pyproject.toml
grantio-scraper/grants_scraper/: __init__.py  __main__.py  orchestrator.py
grantio-scraper/grants_scraper/config/: __init__.py  loader.py  sources.yml
grantio-scraper/grants_scraper/core/: __init__.py  deduplicator.py  http_client.py  models.py  normalizer.py  selectors.py
grantio-scraper/grants_scraper/navigators/: __init__.py  base.py  multi_level.py  single_level.py  static.py
grantio-scraper/grants_scraper/parsers/: __init__.py  base.py  html_detail.py
grantio-scraper/grants_scraper/plugins/: __init__.py  excel.py  llm.py  pdf.py
grantio-scraper/tests/: __init__.py
grantio-scraper/tests/integration/: __init__.py  test_pipeline.py
grantio-scraper/tests/unit/: test_deduplicator.py  test_llm_plugin.py  test_models.py  test_normalizer.py  test_selectors.py
scrapers/: __init__.py
scrapers/charities/: README.md  __init__.py
scrapers/charities/sources/: __init__.py
scrapers/foundations/: README.md  __init__.py
scrapers/foundations/sources/: __init__.py
scrapers/grants/: __init__.py  config.yml  dotaceeu.py  storage.py  test_scrapers.py
scrapers/grants/sources/: __init__.py  ai_extractor.py  army_cz.py  azvcr_cz.py  base.py  eeagrants_cz.py  esfcr_cz.py  gacr_cz.py  irop_mmr_cz.py  justice_cz.py  llm_extractor.py  mdcr_cz.py  mfcr_cz.py  mkcr_cz.py  models.py  mpo_cz.py  msmt_cz.py  mv_gov_cz.py  mz_gov_cz.py  mzcr_cz.py  mzd_gov_cz.py  mze_cz.py  mze_szif_cz.py  mzv_cz.py  nrb_cz.py  nsa_gov_cz.py  opjak_cz.py  opst_cz.py  optak_gov_cz.py  opzp_cz.py  pdf_zasady_parser.py  registry.py  sfzp_cz.py  tacr_cz.py  utils.py  vlada_cz.py
scrapers/grants/web_ui/: __init__.py  server.py
scrapers/grants/web_ui/static/css/: custom.css
scrapers/grants/web_ui/templates/: index.html  layout.html
src/: __init__.py  __main__.py  main.py  scraper.py  web_ui.py
src/static/css/: custom.css
src/static/js/: app.js
src/templates/: index.html
storage/datasets/czech-grants/: 000000001.json  000000002.json  000000003.json  000000004.json  000000005.json  000000006.json  __metadata__.json
storage/key_value_stores/default/: INPUT.json  INPUT.json.__metadata__.json  __metadata__.json  lastFetchedAt-mz-grants  lastFetchedAt-mz-grants.__metadata__.json  runSummary  runSummary.__metadata__.json
tests/: __init__.py  test_scrapers.py
utils/: __init__.py  common.py
