[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "czech-grants-scraper"
version = "0.1.0"
description = "Collection of scrapers for Czech grants, EU funds, and funding opportunities"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11,<3.13"
authors = [
    {name = "chocholous"}
]
keywords = ["scraper", "grants", "czech", "eu-funds", "dotace"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "apify>=2.0.0,<3.0.0",
    "crawlee[playwright]>=0.4.0,<1.0.0",
    "pydantic>=2.0.0,<2.10.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.0.0",
    "pyyaml>=6.0.1",
    "python-dateutil>=2.8.2",
    "pdfplumber>=0.11.0",
    "pandas>=2.1.4",
    "openpyxl>=3.1.2",
    "mammoth>=1.7.1",
    "markdownify>=0.12.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/chocholous/czech-grants-scraper"
Repository = "https://github.com/chocholous/czech-grants-scraper"
Issues = "https://github.com/chocholous/czech-grants-scraper/issues"

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 100
target-version = ["py311", "py312", "py313"]

[tool.ruff]
line-length = 100
target-version = "py311"
